--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon index.js",
+    "client": "cd front ; yarn start "
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "3.9.2",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.2",
+    "nodemon": "^2.0.15",
     "prisma": "^3.9.2"
   },
   "devDependencies": {
